# stella-lich

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  gc.cpp  gc.h  mark_and_sweep.cpp  mark_and_sweep.hpp  runtime.c  runtime.h  tables.cpp  tables.hpp
src/algorithm/: mark_and_sweep.cpp  mark_and_sweep.hpp
test/: CMakeLists.txt  mark_and_sweep_test.cpp  tables_test.cpp  test.cpp
